--- a/CustomScroller/Base.lproj/Main.storyboard
+++ b/CustomScroller/Base.lproj/Main.storyboard
@@ -673,7 +673,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="480" height="270"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <subviews>
-                            <scrollView fixedFrame="YES" autohidesScrollers="YES" horizontalLineScroll="19" horizontalPageScroll="10" verticalLineScroll="19" verticalPageScroll="10" usesPredominantAxisScrolling="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FBU-t2-F1C">
+                            <scrollView fixedFrame="YES" autohidesScrollers="YES" horizontalLineScroll="19" horizontalPageScroll="10" verticalLineScroll="19" verticalPageScroll="10" usesPredominantAxisScrolling="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FBU-t2-F1C" customClass="ClearScrollerBackgroundView">
                                 <rect key="frame" x="0.0" y="-2" width="480" height="252"/>
                                 <clipView key="contentView" ambiguous="YES" id="Kab-O2-f2c">
                                     <rect key="frame" x="1" y="1" width="478" height="250"/>
